[workspace]
resolver = "2"
members = ["cli", "core", "primitives", "service"]
default-members = ["service"]

[workspace.dependencies]
tendermint = { version = "0.37.0", default-features = false }
tendermint-light-client-verifier = { version = "0.37.0", default-features = false, features = [
	"rust-crypto",
] }
tendermint-proto = { version = "0.37.0", default-features = false }
tendermint-rpc = "0.37.0"
serde = "1.0"
# TODO remove this once serialization switches over
ciborium = "0.2"
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }

# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.release]
debug = 1
lto = true
