[workspace]
resolver = "2"
members = ["cli", "core", "primitives"]
default-members = ["cli"]

[workspace.dependencies]
tendermint = { version = "0.39.1", default-features = false }
tendermint-light-client-verifier = { version = "0.39.1", default-features = false, features = [
	"rust-crypto",
] }
tendermint-proto = { version = "0.39.1", default-features = false }
tendermint-rpc = "0.39.1"
serde = "1.0"
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }

# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.release]
debug = 1
lto = true
