[package]
name = "blobstream0"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.2", features = ["node-bindings", "network", "providers", "transports", "signer-local"] }
alloy-contract = "0.2"
alloy-sol-types = { version = "0.7", features = ["json"] }
anyhow = "1.0"
bincode = "1.3.3"
blobstream0-core = { path = "../core" }
blobstream0-primitives = { path = "../primitives" }
clap = { version = "4.5", features = ["derive", "env"] }
dotenv = "0.15"
tendermint-rpc = { workspace = true, features = ["http-client"] }
tokio = { version = "1.38.0", features = ["rt", "macros", "fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
reqwest = "0.12.4"
serde = { workspace = true }
serde_json = "1.0"
serde_with = { version = "3.8", features = ["base64", "hex"] }
