[package]
name = "blobstream0"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "1.0.3", features = ["node-bindings", "network", "providers", "transports", "signer-local"] }
alloy-sol-types = "1.1.0"
alloy-contract = "1.0.3"
anyhow = "1.0"
bincode = "1.3.3"
blobstream0-core = { path = "../core" }
blobstream0-primitives = { path = "../primitives" }
clap = { version = "4.5", features = ["derive", "env"] }
dotenv = "0.15"
rand = "0.8"
tendermint-rpc = { workspace = true, features = ["http-client"] }
tokio = { version = "1.38.0", features = ["rt", "macros", "fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
reqwest = "0.12.4"
serde = { workspace = true }
serde_json = "1.0"
serde_with = { version = "3.8", features = ["base64"] }

[features]
prebuilt-docker = ["blobstream0-core/prebuilt-docker"]
fireblocks = []
