[package]
name = "blobstream0-core"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.3.1", features = ["node-bindings", "network", "providers", "transports", "signer-local"] }
alloy-sol-types = { version = "0.8.2", features = ["json"] }
anyhow = "1.0"
blobstream0-primitives = { path = "../primitives" }
light-client-guest = { path = "../light-client-guest" }
risc0-ethereum-contracts = { git = "https://github.com/risc0/risc0-ethereum", tag = "v1.0.0" }
risc0-zkvm = { version = "=1.1.1" }
serde_bytes = "0.11"
tendermint = { workspace = true }
tendermint-light-client-verifier = { workspace = true }
tendermint-proto = { workspace = true }
tendermint-rpc = { workspace = true, features = ["http-client"] }
tokio = { version = "1.38.0", features = ["rt", "macros", "fs"] }
tracing = "0.1.40"

[features]
prebuilt-docker = ["light-client-guest/prebuilt-docker"]