[package]
name = "guest"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-zkvm = { version = "1.0.1", default-features = false, features = ['std'] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
tendermint = { workspace = true }
tendermint-light-client-verifier = { workspace = true }
ciborium = { workspace = true }
risc0-tm-core = { path = "../core" }
