[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-zkvm = { version = "1.0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { workspace = true }
anyhow = "1.0"
reqwest = "0.12.4"
tokio = { version = "1.38.0", features = ["rt", "macros"] }
tendermint = { workspace = true }
tendermint-light-client-verifier = { workspace = true }
tendermint-rpc = { workspace = true, features = ["http-client"] }
ciborium = { workspace = true }
risc0-tm-core = { path = "../core" }
batch-guest = { path = "../batch-guest" }
light-client-guest = { path = "../light-client-guest" }
