[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-zkvm = { version = "1.0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { workspace = true }
anyhow = "1.0"
reqwest = "0.12.4"
tokio = { version = "1.38.0", features = ["rt", "macros", "fs"] }
tendermint = { workspace = true }
tendermint-light-client-verifier = { workspace = true }
tendermint-rpc = { workspace = true, features = ["http-client"] }
ciborium = { workspace = true }
risc0-tm-core = { path = "../core" }
batch-guest = { path = "../batch-guest" }
light-client-guest = { path = "../light-client-guest" }

clap = { version = "4.5", features = ["derive"] }
bincode = "1.3.3"

[dev-dependencies]
tokio = { version = "1.38.0", features = ["rt", "macros", "fs"] }
alloy-sol-types = "0.7"
alloy = { version = "0.1", features = ["node-bindings", "network", "providers", "signer-local"] }
alloy-contract = "0.1"
serde_json = "1.0"
serde_with = { version = "3.8", features = ["base64"] }
