[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.1", features = ["node-bindings", "network", "providers", "transports", "signer-local"] }
alloy-sol-types = "0.7"
anyhow = "1.0"
batch-guest = { path = "../batch-guest" }
bincode = "1.3.3"
ciborium = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
light-client-guest = { path = "../light-client-guest" }
reqwest = "0.12.4"
risc0-ethereum-contracts = { git = "https://github.com/risc0/risc0-ethereum", tag = "v1.0.0" }
risc0-tm-core = { path = "../core" }
risc0-zkvm = { version = "1.0.1" }
serde = { workspace = true }
tendermint = { workspace = true }
tendermint-light-client-verifier = { workspace = true }
tendermint-rpc = { workspace = true, features = ["http-client"] }
tokio = { version = "1.38.0", features = ["rt", "macros", "fs"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
alloy-contract = "0.1"
serde_json = "1.0"
serde_with = { version = "3.8", features = ["base64"] }
tokio = { version = "1.38.0", features = ["rt", "macros", "fs"] }
