[package]
name = "light-client-guest"
version = "0.1.0"
edition = "2021"

[build-dependencies]
risc0-build = { version = "=1.1.1" }
risc0-build-ethereum = { git = "https://github.com/risc0/risc0-ethereum", tag = "v1.0.0" }

# Currently just used to format built artifact
serde_json = "1.0"

[features]
prebuilt-docker = []

[package.metadata.risc0]
methods = ["guest"]