[package]
name = "service"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.2", features = ["node-bindings", "network", "providers", "transports", "signer-local"] }
anyhow = "1.0"
blobstream0-core = { path = "../core" }
blobstream0-primitives = { path = "../primitives" }
clap = { version = "4.5", features = ["derive", "env"] }
dotenv = "0.15"
tendermint-rpc = { workspace = true, features = ["http-client"] }
tokio = { version = "1.38.0", features = ["rt", "macros", "fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
alloy-contract = "0.2"
alloy-sol-types = "0.7"
reqwest = "0.12.4"
tokio = { version = "1.38.0", features = ["rt", "macros", "fs"] }
