[package]
name = "batch-guest"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "1.0.1", default-features = false, features = ['std'] }
light-client-guest = { path = "../../light-client-guest" }
risc0-tm-core = { path = "../../core" }
alloy-sol-types = "0.7"
alloy-primitives = "0.7"

[patch.crates-io]
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }